index.html Change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/38b873eea8.js" crossorigin="anonymous"></script>
     <script src="progressbar.js"></script>
-    <title>Document</title>
+    <title>J. Fiedler Portfolio</title>
 </head>
 <body>
     
@@ -62,7 +62,7 @@
                 <h1>Meine Projekte</h1>
                 <div class="container" id="container">
                 <div class="box">
-                    <a href="https://codepen.io/nichtlilo/pen/qBMxKjd"> <img src="Testbild.jpg" alt=""> </a>
+                    <a href="https://codepen.io/nichtlilo/pen/qBMxKjd"> <img src="testbild.jpg" alt=""> </a>
                     <p>ToDo List</p> <a href="https://codepen.io/nichtlilo/pen/qBMxKjd"><p  style="text-decoration-line: underline;">Code</p></a>
                 </div>
         
