--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxx" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/38b873eea8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>J. Fiedler Portfolio</title>
 </head>
 <body>
     
@@ -20,9 +20,24 @@
             </div>
 
             <div class="navbar-right">
-              <a href="#" class="navbar-link">Link</a>
-              <a href="#" class="navbar-link">Link</a>
-              <a href="#" class="navbar-link">Link</a>
+                <a href="index.html" class="navbar-link desktop-only">
+                    Home
+                </a>
+                <a href="https://github.com/nichtlilo" class="navbar-link desktop-only">
+                    GitHub
+                </a>
+                <a href="https://codepen.io/nichtlilo" class="navbar-link desktop-only">
+                    CodePen
+                </a>
+                <a href="index.html" class="navbar-icon mobile-only">
+                    <i class="fas fa-home"></i>
+                </a>
+                <a href="https://github.com/nichtlilo" class="navbar-icon mobile-only">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://codepen.io/nichtlilo" class="navbar-icon mobile-only">
+                    <i class="fab fa-codepen"></i>
+                </a>
             </div>
 
           </nav>          
@@ -49,15 +64,12 @@
             </div>
 
             <h1>Über mich…</h1>
-            <p class="aboutme">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed 
-                diam nonumy eirmod tempor invidunt ut labore et dolore magna 
-                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo 
-                duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata 
-                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
-                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero 
-                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
-                no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p class="aboutme">21-jähriger Mediengestalter in Ausbildung mit Leidenschaft für Webdesign. 
+                Mit 2 Jahren Erfahrung verbinde ich kreative Ideen und technische Fähigkeiten, um 
+                beeindruckende und benutzerfreundliche Websites zu gestalten. Immer auf dem neuesten 
+                Stand der Trends und Technologien, strebe ich danach, mit Selbstbewusstsein und Professionalität 
+                jedes Projekt erfolgreich umzusetzen. Teamplayer mit eigenständiger Arbeitsweise, bereit für 
+                neue Herausforderungen. Gemeinsam verwirklichen wir deine Vision!</p>
         </div>
 
         <h2>Meine Arbeiten…</h2>
@@ -76,14 +88,30 @@
 
         <footer>
             <div class="navbar-left">
-                    <span id="copyright" class="navbar-email">&copy; Alle Rechte vorbehalten</span>
+                    <span class="navbar-email">&copy;</span>
+                    <span id="copyright" class="navbar-email">Alle Rechte vorbehalten</span>
             </div>
             
             <div class="navbar-right">
-                <a href="#" class="navbar-link">Link</a>
-                <a href="#" class="navbar-link">Link</a>
-                <a href="#" class="navbar-link">Link</a>
-              </div>
+                <a href="index.html" class="navbar-link desktop-only">
+                    Home
+                </a>
+                <a href="https://github.com/nichtlilo" class="navbar-link desktop-only">
+                    GitHub
+                </a>
+                <a href="https://codepen.io/nichtlilo" class="navbar-link desktop-only">
+                    CodePen
+                </a>
+                <a href="index.html" class="navbar-icon mobile-only">
+                    <i class="fas fa-home"></i>
+                </a>
+                <a href="https://github.com/nichtlilo" class="navbar-icon mobile-only">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://codepen.io/nichtlilo" class="navbar-icon mobile-only">
+                    <i class="fab fa-codepen"></i>
+                </a>
+            </div>
         </footer>
 
 </body>
