Vorschaubilder durch Videos ersetzt

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="werk_4.html"> <img src="work/biografienatelier.jpg" alt=""> </a>
             <a href="werk_5.html"> <img src="work/Shopseite.jpg" alt=""> </a>
             <a href="werk_6.html"> <img src="work/ihk_prüfungsseite.jpg" alt=""> </a>
-            <a href="werk_7.html"> <img src="work/übungsaufgabe.jpg" alt=""> </a>
+            <a href="werk_7.html"> <img src="work/html_uebung.jpg" alt=""> </a>
             <a href="werk_8.html"> <img src="work/Musterbogen.jpg" alt=""> </a>
             <a href="werk_9.html"> <img src="work/printaufgabe.jpg" alt=""> </a>
         </div>
