--- a/werk_1.html
+++ b/werk_1.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/todoliste.jpg" alt="">
+        <img src="videos/ToDoList.mp4" alt="" width="70%">
     </div>
     
     <div class="textBox">
