--- a/werk_7.html
+++ b/werk_7.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/übungsaufgabe.jpg" alt="">
+        <img src="videos/html_uebung_vid.gif" alt="" width="70%">
     </div>
     
     <div class="textBox">
