--- a/werk_8.html
+++ b/werk_8.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/Musterbogen.jpg" alt="">
+        <img src="videos/HBS_DesignManual.gif" alt="" width="70%">
     </div>
     
     <div class="textBox">
