--- a/werk_3.html
+++ b/werk_3.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/rechnungsteiler.jpg" alt="">
+        <img src="videos/FastTip.mp4" alt="" width="70%">
     </div>
     
     <div class="textBox">
