--- a/werk_5.html
+++ b/werk_5.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/Shopseite.jpg" alt="">
+        <img src="videos/shopseite.gif" alt="" width="70%">
     </div>
     
     <div class="textBox">
