--- a/werk_9.html
+++ b/werk_9.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="work/printaufgabe.jpg" alt="">
+        <img src="videos/schriftklassen.gif" alt="" width="70%">
     </div>
     
     <div class="textBox">
