New Videos added

--- a/werk_4.html
+++ b/werk_4.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="videos/biografienatelier.gif" alt="" width="70%">
+        <img src="videos/biografienatelier.mp4" alt="" width="70%">
     </div>
     
     <div class="textBox">
