--- a/werk_5.html
+++ b/werk_5.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxx" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/38b873eea8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>J. Fiedler Portfolio</title>
 </head>
 <body>
     
