img tag -> video tag

--- a/werk_6.html
+++ b/werk_6.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="videos/ihk_seite.mp4" alt="" width="70%">
+        <video muted loop autoplay src="videos/ihk_seite.mp4" alt="" width="70%"> </video>
     </div>
     
     <div class="textBox">
