--- a/werk_7.html
+++ b/werk_7.html
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="videos/html_uebung_vid.mp4" alt="" width="70%">
+        <video muted loop autoplay src="videos/html_uebung_vid.mp4" alt="" width="70%"></video>
     </div>
     
     <div class="textBox">
