--- a/werk_9.html
+++ b/werk_9.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxx" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/38b873eea8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>J. Fiedler Portfolio</title>
 </head>
 <body>
     
@@ -50,7 +50,7 @@
 <div class="project">
 
     <div class="imgBox">
-        <img src="videos/schriftklassen.mp4" alt="" width="70%">
+        <video muted loop autoplay src="videos/schriftklassen.mp4" alt="" width="70%"> </video>
     </div>
     
     <div class="textBox">
