--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
         <div class="container">
-            <div class="circle"></div>
+            <div class="circle"><img src="pfp/pic_myself.png" alt="" width="100%"></div>
             <p class="intro-text">Hi, ich bin Justin 👋🏻</p>
         </div>
 
