--- a/werk_9.html
+++ b/werk_9.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-left">
-                <a href="#" class="navbar-link">
+                <a href="mailto:fiedler.justin@icloud.com" class="navbar-link">
                     <i class="fa-regular fa-envelope" style="color: #ffffff;"></i>
                     <span class="navbar-email">fiedler.justin@icloud.com</span>
                   </a>
@@ -74,8 +74,10 @@
 
     <footer>
         <div class="navbar-left">
-            <span class="navbar-email">&copy;</span>
-            <span id="copyright" class="navbar-email">Alle Rechte vorbehalten</span>
+            <a href="mailto:fiedler.justin@icloud.com"> 
+                <span class="navbar-email">&copy;</span>
+                <span id="copyright" class="navbar-email">Alle Rechte vorbehalten</span>
+            </a>
     </div>
     
     <div class="navbar-right">
