--- a/werk_1.html
+++ b/werk_1.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-left">
-                <a href="#" class="navbar-link">
+                <a href="mailto:fiedler.justin@icloud.com" class="navbar-link">
                     <i class="fa-regular fa-envelope" style="color: #ffffff;"></i>
                     <span class="navbar-email">fiedler.justin@icloud.com</span>
                   </a>
